# unsaferust.org

./: .env  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
client/: 404.html  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.module.css  App.tsx  index.css  index.tsx
client/src/components/: Footer.tsx  Header.tsx  Home.tsx  Pager.tsx  ProjectStatDetails.tsx  ProjectStatsList.tsx
etc/cron.d/: health-check.sh
etc/nginx/conf.d/: default.conf
server/: Cargo.toml  Dockerfile  Dockerfile.prod
server/data/: projects.bak.txt  projects.txt  providers.txt
server/migrations/: 20220426212248_providers.down.sql  20220426212248_providers.up.sql  20220427124218_projects.down.sql  20220427124218_projects.up.sql  20220427184739_project_stats.down.sql  20220427184739_project_stats.up.sql  20230217095155_errors.down.sql  20230217095155_errors.up.sql
server/src/: handlers.rs  lib.rs  main.rs
server/src/models/: appState.rs  configuration.rs  mod.rs  pagination.rs  project.rs  provider.rs
server/src/services/: postgres.rs  redis.rs
server/src/utils/: mod.rs
server/tests/: handlers.rs
