[package]
name = "unsaferust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.0.1"
lazy_static = "^1.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
anyhow = "1"
actix-cors = "0"

[dev-dependencies]
reqwest = { version = "0", features = ["json"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

